fix: points and path
