# src/heights/routes/heightsRouter.ts
@@ -6,6 +6,8 @@ const heightsRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
   const router = Router();
   const controller = dependencyContainer.resolve(HeightsController);
 
+  router.post('/points', controller.getPoints);
+  router.post('/path', controller.getPath);
   router.post('/polygon', controller.getPolygon);
   router.post('/', controller.getHeights);
   router.get('/:longitude/:latitude', controller.getHeight);
